--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 #myCanvas {
     position:absolute;
     left: 100px;
+    cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🦄</text></svg>")
+    16 0,
+  auto;
 }
 
 #red {
@@ -8,3 +11,4 @@
     left: 200px;
     top: 100px;
 }
+
