--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,12 @@
 #myCanvas {
-    position:absolute;
-    left: 100px;
-    cursor: alias;
+    
+    display: grid;
+    margin: auto;
+    left: 200px;
+    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>✏️</text></svg>")
+    16 0,
+  auto;
+    
 }
 
 #red {
@@ -9,3 +14,19 @@
     left: 200px;
     top: 100px;
 }
+/* html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  border: 0;
+  overflow: hidden;
+  /*  Disable scrollbars */
+  /* No floating content on sides */
+
+  #clearButton {
+      position:absolute;
+      border-radius: 10px;
+      
+
+  }
