--- a/public/styles.css
+++ b/public/styles.css
@@ -10,11 +10,11 @@
     
 }
 
-red {
+/* red {
     position: absolute;
     left: 200px;
     top: 100px;
-}
+} */
 /* html,
 body {
   width: 100%;
